# LibMessageKit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/libmessagekit/: call.h  call_history.h  common.h  config.h  contacts.h  conversations.h  core.h  error_codes.h  libmessagekit.h  messages.h  settings.h  user.h
include/libmessagekit/private/: database.h  network.h  utils.h
resources/: schema.sql
src/core/: core.c
src/db/: database.c
src/utils/: utils.c
